force-app/main/default/objects/General_Ledger__c/General_Ledger__c.object-meta.xml
<CustomObject>
    <label>General Ledger</label>
    <nameField>
        <displayFormat>GL-{00000}</displayFormat>
        <label>General Ledger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>