force-app/main/default/objects/General_Ledger__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <label>Accounting Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landscaping Services</fullName>
            </value>
            <value>
                <fullName>Job Materials</fullName>
            </value>
            <value>
                <fullName>Plants and Soil</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable (A/R)</fullName>
            </value>
            <value>
                <fullName>Undeposited Funds</fullName>
            </value>
            <value>
                <fullName>Board of Equalization Payable</fullName>
            </value>
            <value>
                <fullName>Pest Control Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>