force-app/main/default/objects/General_Ledger__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>