force-app/main/default/objects/General_Ledger__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>