force-app/main/default/objects/General_Ledger__c/fields/MemoDescription__c.field-meta.xml
<CustomField>
    <fullName>MemoDescription__c</fullName>
    <label>Memo/Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>