force-app/main/default/objects/General_Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Company__c</columns>
    <columns>MemoDescription__c</columns>
    <columns>Accounting_Code__c</columns>
    <columns>Debit__c</columns>
    <columns>Credit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>